@@ -99,6 +99,8 @@ export(
        "segmentsGrob", "textGrob", "xsplineGrob", "bezierGrob",
        "xsplinePoints", "bezierPoints",
 
+       "grobCoords", "grobPoints",
+    
        "grid.xaxis", "grid.yaxis",
        "xaxisGrob", "yaxisGrob",
 
@@ -199,6 +201,17 @@ S3method("gridList", "vpTree")
 S3method("gridList", "vpPath")
 S3method("gridList", "pop")
 S3method("gridList", "up")
+
+S3method("grobCoords", "grob")
+S3method("grobCoords", "gList")
+S3method("grobCoords", "gTree")
+S3method("grobPoints", "circle")
+S3method("grobPoints", "lines")
+S3method("grobPoints", "polygon")
+S3method("grobPoints", "rect")
+S3method("grobPoints", "segments")
+S3method("grobPoints", "text")
+S3method("grobPoints", "xspline")
 
 S3method("grobHeight", "grob")
 S3method("grobHeight", "gList")
